--- a/frontend/src/app/components/contacts/contacts.component.css
+++ b/frontend/src/app/components/contacts/contacts.component.css
@@ -55,3 +55,8 @@ h4 {
   font-family: Poppins SemiBold, sans-serif;
   font-size: 1.2em;
 }
+
+.icons-font{
+  font-family: Poppins Medium, sans-serif;
+  font-size: .9em;
+}
