--- a/frontend/src/app/components/modals/group/group-members/group-members.component.html
+++ b/frontend/src/app/components/modals/group/group-members/group-members.component.html
@@ -54,10 +54,10 @@
             @if (contacts.length !== 0) {
               <ul class="list-group">
               @for (contact of contacts; track $index) {
-                <li class="list-group-item d-flex justify-content-between align-items-start">
+                <li class="list-group-item d-flex justify-content-between align-items-start" (click)="handleAddUser(contact.user)">
                   <div class="ms-1 me-auto">
-                    <div class="fw-bold">{{contact.username}}</div>
-                    {{contact.name}} {{contact.lastName}}
+                    <div class="fw-bold">{{contact.user.username}}</div>
+                    {{contact.user.name}} {{contact.user.lastName}}
                   </div>
                 </li>
                 }
