--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-navbar />
+<app-navbar [currentUser]="currentUser"/>
 <div style="min-height: calc(100vh - 61.6px); background-color: #000000ed;">
   <div class="p-5" style="color: #ffffff; min-height: 350px;">
     <div class="container py-5" style="width: 100%;">
