--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -1,4 +1,4 @@
-<app-navbar />
+<app-navbar [currentUser]="currentUser" />
 <div style="min-height: 100vh; background-color: #000000ed;">
   <div class="container" style="max-width: 1200px;">
     <div
